k8s/static-sites/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
