k8s/static-sites/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    app.kubernetes.io/name: web
    app.kubernetes.io/instance: site
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
